--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,3 @@
-# Node.js
-node_modules/
-
-# Logs
-logs/
-*.log
-
-# Dependency directories
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Production
-build/
-
-# Misc
-.DS_Store
+node_modules
 .env
-
-# Next.js
-.next/
-out/
-
-# Test
-coverage/
-
-# IDEs
-.idea/
-.vscode/
-*.sublime-project
-*.sublime-workspace
+.DS_Store
