--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,16 +3,16 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-empty-function": "warn",
-    "prefer-const": "error",
-    "no-var": "error",
+    "prefer-const": "warn",
+    "no-var": "warn",
     "no-console": "warn",
-    "eqeqeq": "error",
-    "curly": "error",
+    "eqeqeq": "warn",
+    "curly": "warn",
     "no-duplicate-imports": "error",
     "no-unused-expressions": "error",
     "react/jsx-uses-react": "off",
